; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_mtu.c_frame_subtract_extra.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_mtu.c_frame_subtract_extra.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.frame = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @frame_subtract_extra(%struct.frame* %0, %struct.frame* %1) #0 {
  %3 = alloca %struct.frame*, align 8
  %4 = alloca %struct.frame*, align 8
  store %struct.frame* %0, %struct.frame** %3, align 8
  store %struct.frame* %1, %struct.frame** %4, align 8
  %5 = load %struct.frame*, %struct.frame** %4, align 8
  %6 = getelementptr inbounds %struct.frame, %struct.frame* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.frame*, %struct.frame** %3, align 8
  %9 = getelementptr inbounds %struct.frame, %struct.frame* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = sub nsw i64 %10, %7
  store i64 %11, i64* %9, align 8
  %12 = load %struct.frame*, %struct.frame** %4, align 8
  %13 = getelementptr inbounds %struct.frame, %struct.frame* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.frame*, %struct.frame** %3, align 8
  %16 = getelementptr inbounds %struct.frame, %struct.frame* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = sext i32 %17 to i64
  %19 = add nsw i64 %18, %14
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %16, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
